# ferrum-infer-rs

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_COMPLIANCE_REPORT.md  ARCHITECTURE_SUMMARY.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE_AUDIT_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEEP_AUDIT_REPORT.md  Dockerfile  Dockerfile.cuda  Dockerfile.cuda-check  Dockerfile.cuda-dev  FINAL_AUDIT_REPORT.md  FINAL_SUMMARY.md  FINAL_WORK_REPORT.md  LICENSE  Makefile  README.md  README_AUDIT.md  README_zh.md  REFACTORING_STATUS.md  TEST_REPORT.md  WORK_COMPLETED_SUMMARY.md  artifact-files.sha256  benchmark_metal.sh  diagnostic-summary.json  docker-compose.yml  ferrum.toml  runtime-vnext-phase-b-trace-e5a6e6c1-20260724T030818Z.tar.zst.sha256  runtime-vnext-replay-kernel-attribution-36b1b3af-20260724T052317Z.tar.zst.sha256  runtime-vnext-replay-kernel-attribution-v2-32c53a6b-20260724T060439Z.tar.zst.sha256  runtime-vnext-replay-span-33fc6e46-20260724T041818Z.tar.zst  runtime-vnext-replay-span-33fc6e46-20260724T041818Z.tar.zst.sha256  rustfmt.toml  test_basic.rs  (+5 more)
crates/ferrum-attention/: Cargo.toml  build.rs
crates/ferrum-attention/src/: lib.rs
crates/ferrum-attention/tests/: cpu_transformer_test.rs  gemm_test.rs  metal_test.rs  paged_attention_test.rs  paged_kv_append_test.rs  transformer_test.rs
crates/ferrum-bench-core/: Cargo.toml
crates/ferrum-bench-core/src/: arrivals.rs  env.rs  jsonl_journal.rs  lib.rs  profile.rs  report.rs  stats.rs  trace.rs
crates/ferrum-cache/: Cargo.toml
crates/ferrum-cache/src/: lib.rs  traits.rs  types.rs
crates/ferrum-cli/: Cargo.toml
crates/ferrum-cli/src/: chat_template.rs  client.rs  config.rs  gpu_devices.rs  gpu_mem_autosize.rs  layer_split_pipeline.rs  lib.rs  main.rs  memory_profile.rs  observability_product.rs  observability_vertical_slice.rs  output.rs  profiler.rs  runtime_env.rs  source_resolver.rs  utils.rs
crates/ferrum-cli/tests/: chat_pty.rs  chat_smoke.rs  chat_stress.rs  cli_e2e.rs  quant_kl.rs  qwen35_reference_product.rs  reference_match.rs  server_agent_tools.rs  server_lora_startup.rs  server_openai_compat.rs  server_prefix_cache_product.rs  server_session_cache.rs  server_smoke.rs  server_stress.rs  server_structured_output.rs  vllm_migration_compat.rs
crates/ferrum-core/: Cargo.toml
crates/ferrum-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/ferrum-cuda-kernels/: Cargo.toml  build.rs
crates/ferrum-cuda-kernels/kernels/: batched_decode_attention.cu  batched_flash_decode_attention.cu  decode_attention.cu  dequant_int4.cu  fused_add_rms_norm.cu  fused_silu_mul.cu  marlin_cuda_kernel.cu  paged_decode_attention.cu  rope.cu  softmax.cu
crates/ferrum-cuda-kernels/src/: cublas.rs  cuda_decode.rs  cuda_graph.rs  decode_attention.rs  decode_buffers.rs  fused_add_rms_norm.rs  fused_silu_mul.rs  gpu_paged_kv.rs  kernel_loader.rs  lib.rs  marlin.rs  nccl_comm.rs  quant.rs  residual_add.rs  rms_norm.rs  tp_decode.rs  weight_store.rs
crates/ferrum-engine/: Cargo.toml  build.rs
crates/ferrum-engine/benches/: engine_bench.rs
crates/ferrum-engine/src/: attention.rs  batch_manager.rs  builder.rs  cache_manager.rs  candle_backend.rs  continuous_engine.rs  coordinator.rs  embedding_engine.rs  engine.rs  executor.rs  factory.rs  layer_split.rs  lib.rs  memory_manager.rs  modality_stubs.rs  model_executor.rs  model_runner.rs  pipeline.rs  product_composition.rs  recurrent_state.rs  registry.rs  resource_lifecycle.rs  sampling.rs  scheduler.rs  speculative.rs  tokenizer.rs  transcription_engine.rs  tts_engine.rs
crates/ferrum-engine/tests/: backend_safety_test.rs  chunked_prefill_test.rs  concurrency_stress_test.rs  continuous_batch_test.rs  correctness_test.rs  latency_profile_test.rs  paged_attention_test.rs  prefix_cache_test.rs  qwen_concurrency.rs  regex_guided_test.rs  spec_decode_test.rs  tiny_stack.rs
crates/ferrum-interfaces/: Cargo.toml
crates/ferrum-interfaces/examples/: vnext_public_owner_map.rs
crates/ferrum-interfaces/src/: backend.rs  decode_backend.rs  engine.rs  kernel_ops.rs  kv_cache.rs  kv_dtype.rs  lib.rs  memory.rs  model_builder.rs  model_executor.rs  recurrent_state.rs  sampler.rs  scheduler.rs  tensor.rs  tokenizer.rs  transformer.rs
crates/ferrum-interfaces/tests/: engine_types_tests.rs  recurrent_state_tests.rs  sampler_tests.rs  scheduler_resource_tests.rs  tensor_utils_tests.rs  vnext_compile.rs  vnext_contract_tests.rs  vnext_device_operation_batch_contract_tests.rs  vnext_device_operation_cancel_contract_tests.rs  vnext_device_operation_completion_contract_tests.rs  vnext_device_operation_contract_tests.rs  vnext_device_operation_dispatch_contract_tests.rs  vnext_device_operation_legacy_authority_contract_tests.rs  vnext_device_operation_wave_contract_tests.rs  vnext_event_contract_tests.rs  vnext_event_execution_contract_tests.rs  vnext_event_recovery_contract_tests.rs  vnext_event_replay_contract_tests.rs  vnext_event_resource_pool_contract_tests.rs  vnext_event_sink_contract_tests.rs  vnext_execution_graph_contract_tests.rs  vnext_extension_drill_contract_tests.rs  vnext_legacy_map.rs  vnext_model_wire_contract_tests.rs  vnext_oracle_contract_tests.rs  vnext_plan_wire_contract_tests.rs  vnext_planning_resource_contract_tests.rs  vnext_program_plan_compiler_contract_tests.rs  vnext_provider_selection_contract_tests.rs  vnext_resolution_contract_tests.rs  vnext_resolution_limits_contract_tests.rs  vnext_resource_capacity_contract_tests.rs  vnext_resource_contract_tests.rs  vnext_resource_recovery_authority_tests.rs  vnext_resource_runtime_close_tests.rs  vnext_source_audit_contract_tests.rs  (+7 more)
crates/ferrum-kernels/: Cargo.toml  build.rs
crates/ferrum-kv/: Cargo.toml
crates/ferrum-models/: Cargo.toml  DEVELOPMENT.md
crates/ferrum-native-ops/: Cargo.toml
crates/ferrum-quantization/: Cargo.toml
crates/ferrum-runtime/: Cargo.toml
crates/ferrum-sampler/: Cargo.toml
crates/ferrum-scheduler/: Cargo.toml
crates/ferrum-server/: Cargo.toml
crates/ferrum-testkit/: Cargo.toml
crates/ferrum-tokenizer/: Cargo.toml
crates/ferrum-types/: Cargo.toml
(+7970 files in other folders)
