[workspace]
members = [
    "crates/ferrum-core",
    "crates/ferrum-engine",
    "crates/ferrum-models",
    "crates/ferrum-cache",
]
resolver = "2"

# Note: Additional crates will be added as they are implemented:
# - ferrum-cache: Cache management with PagedAttention
# - ferrum-scheduler: Request scheduling and batching
# - ferrum-server: HTTP API server (using Axum)
# - ferrum-models: Model implementations with Candle
# - ferrum-runtime: Execution runtime and GPU operations

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Ferrum Team"]
license = "MIT"
repository = "https://github.com/ferrum-rs/ferrum-infer"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
once_cell = "1.19"

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Configuration
config = "0.14"
toml = "0.8"

# HTTP - Using Axum
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression"] }
hyper = "1.0"

# Stream processing
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"

# ML Framework - Candle
candle-core = "0.7"
candle-nn = "0.7"
candle-transformers = "0.7"
hf-hub = { version = "0.3", features = ["tokio"] }
tokenizers = { version = "0.19", features = ["onig"] }
safetensors = "0.4"

# Tensor operations
ndarray = "0.15"
half = "2.4"

# Internal crates (to be added as they are implemented)
ferrum-core = { path = "crates/ferrum-core" }
ferrum-engine = { path = "crates/ferrum-engine" }
ferrum-models = { path = "crates/ferrum-models" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

