[workspace]
members = [
    # New refactored crates
    "crates/ferrum-types",
    "crates/ferrum-interfaces",
    
    # Implementation crates
    "crates/ferrum-runtime",
    "crates/ferrum-scheduler", 
    "crates/ferrum-tokenizer",
    "crates/ferrum-sampler",
    "crates/ferrum-kv",
    
    # CUDA kernel crate
    "crates/ferrum-cuda-kernels",

    # Attention kernel crate
    "crates/ferrum-attention",

    # Existing crates (to be refactored)
    "crates/ferrum-engine",
    "crates/ferrum-models",
    "crates/ferrum-server",
    "crates/ferrum-cli",
    "crates/ferrum-testkit",
]
resolver = "2"


[workspace.package]
version = "0.6.0"
edition = "2021"
authors = ["Ferrum Team"]
license = "MIT"
repository = "https://github.com/sizzlecar/ferrum-infer-rs"
homepage = "https://github.com/sizzlecar/ferrum-infer-rs"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
once_cell = "1.19"

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Configuration
config = "0.14"
toml = "0.8"

# HTTP - Using Axum
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression"] }
hyper = "1.0"
hyper-util = { version = "0.1", default-features = false, features = ["client", "http1", "http2", "tokio"] }
http = "1.0"
http-body = "1.0"
mime = "0.3"

# Authentication
jsonwebtoken = "9.2"
base64 = "0.22"

# CLI utilities
clap = "4.4"
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
colored = "2.1"
walkdir = "2.4"
serde_yaml = "0.9"

# HTTP client (using rustls to avoid macOS system-configuration issues)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "socks", "stream", "json"] }

# Benchmarking
criterion = "0.5"

# System utilities
num_cpus = "1.16"
dirs = "5.0"

# Stream processing
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"

# ML Framework - Mock for MVP (Candle to be added later)
## candle-core = { version = "0.6", default-features = false }
hf-hub = "0.4.1"
tokenizers = { version = "0.21", features = ["onig"] }
safetensors = "0.4"

# Random - 使用与candle-vllm相同的版本
rand = "0.9.0"
rand_distr = "0.4.3"

# Tensor operations
ndarray = "0.15"
half = { version = "2.5.0", features = ["num-traits", "use-intrinsics", "rand_distr"] }

# ML Framework - official candle from crates.io
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
candle-flash-attn = "0.9.2"
candle-metal-kernels = "0.9.2"

# Internal crates - New refactored crates
ferrum-types = { path = "crates/ferrum-types", version = "0.6.0" }
ferrum-interfaces = { path = "crates/ferrum-interfaces", version = "0.6.0" }

# Internal crates - Implementation crates
ferrum-runtime = { path = "crates/ferrum-runtime", version = "0.6.0" }
ferrum-scheduler = { path = "crates/ferrum-scheduler", version = "0.6.0" }
ferrum-tokenizer = { path = "crates/ferrum-tokenizer", version = "0.6.0" }
ferrum-sampler = { path = "crates/ferrum-sampler", version = "0.6.0" }
ferrum-kv = { path = "crates/ferrum-kv", version = "0.6.0" }

# CUDA kernel crate
ferrum-cuda-kernels = { path = "crates/ferrum-cuda-kernels", version = "0.6.0" }

# Internal crates - Existing crates (to be refactored)
ferrum-engine = { path = "crates/ferrum-engine", version = "0.6.0" }
ferrum-models = { path = "crates/ferrum-models", version = "0.6.0" }
ferrum-server = { path = "crates/ferrum-server", version = "0.6.0" }
ferrum-cli = { path = "crates/ferrum-cli", version = "0.6.0" }
ferrum-testkit = { path = "crates/ferrum-testkit", version = "0.6.0" }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"



