[package]
name = "ferrum-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
ferrum-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }

# Data structures
dashmap = "6.1"
indexmap = "2.2"
smallvec = "1.13"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging and metrics
tracing = { workspace = true }
metrics = { workspace = true }

# Memory management
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
bytesize = "1.3"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.4"

[features]
default = []
stats = []  # Enable detailed statistics collection
