[package]
name = "ferrum-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ferrum"
path = "src/main.rs"

[dependencies]
# Core dependencies
ferrum-types = { workspace = true }
ferrum-interfaces = { workspace = true }
ferrum-engine = { workspace = true }
ferrum-models = { workspace = true }
ferrum-runtime = { workspace = true }
ferrum-scheduler = { workspace = true }
ferrum-server = { workspace = true }

# CLI framework
clap = { version = "4.4", features = ["derive", "color", "env"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = { workspace = true }
toml = { workspace = true }

# File operations
walkdir = "2.4"

# Terminal utilities
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
colored = "2.1"

# Time and ID
chrono = { workspace = true }
uuid = { workspace = true }

# HTTP client for testing
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = "0.1"
futures = "0.3"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# System utilities
num_cpus = { workspace = true }
dirs = { workspace = true }

[features]
default = []
benchmark = []  # Enable benchmarking utilities
dev-tools = []  # Enable development tools
interactive = [] # Enable interactive mode
metal = ["ferrum-engine/metal"]  # Enable Apple GPU acceleration
