[package]
name = "ferrum-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core types and interfaces
ferrum-types = { workspace = true }
ferrum-interfaces = { workspace = true }

# Keep existing dependencies that are used by types.rs and error.rs
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
