[package]
name = "ferrum-cuda-kernels"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ferrum-types = { workspace = true }
candle-core = { workspace = true }
half = { workspace = true }
tracing = { workspace = true }
cudarc = { version = "0.19", default-features = false, features = ["driver", "cublas", "f16"], optional = true }

[build-dependencies]
bindgen_cuda = "0.1.6"

[features]
default = []
cuda = ["candle-core/cuda", "dep:cudarc"]
marlin = ["cuda"]  # Marlin INT4xFP16 kernel (requires nvcc + SM >= 8.0)
