[package]
name = "ferrum-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
ferrum-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }

# Metrics
metrics = { workspace = true }

# ML Framework - Candle
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
tokenizers = { workspace = true }
safetensors = { workspace = true }

# Random support
rand = { workspace = true }
rand_distr = { workspace = true }
half = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[features]
default = []
cuda = ["candle-core/cuda"]
