[package]
name = "ferrum-interfaces"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core types
ferrum-types = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

# Small vectors for performance
smallvec = { version = "1.11", features = ["serde"] }

# Random number generation
rand = { workspace = true }

# Tracing
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"
chrono = { workspace = true }

# Standard sync primitives
std-sync = { package = "parking_lot", version = "0.12", optional = true }

[features]
default = []
# Enable if you need concrete sync primitives in interfaces
sync = ["std-sync"]
