[package]
name = "ferrum-interfaces"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core trait contracts for the Ferrum LLM inference engine"
readme = "../../README.md"

[dependencies]
# Core types
ferrum-types = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

# Small vectors for performance
smallvec = { version = "1.11", features = ["serde"] }

# Random number generation
rand = { workspace = true }

# Tracing
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"
chrono = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }

# Standard sync primitives
std-sync = { package = "parking_lot", version = "0.12", optional = true }

[features]
default = []
# Enable if you need concrete sync primitives in interfaces
sync = ["std-sync"]

[dev-dependencies]
syn = { version = "2", features = ["full", "visit"] }
trybuild = "1.0"
