[package]
name = "ferrum-kernels"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Unified compute kernels (CUDA/Metal/CPU) and model runner for Ferrum inference"
readme = "../../README.md"

[dependencies]
ferrum-types = { workspace = true }
ferrum-interfaces = { workspace = true }
candle-core = { workspace = true }
half = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
cudarc = { version = "0.19", default-features = false, features = ["driver", "cublas", "f16", "nvrtc"], optional = true }
metal = { version = "0.31", optional = true }

[build-dependencies]
bindgen_cuda = "0.1.6"

[features]
default = []
cuda = ["candle-core/cuda", "dep:cudarc", "marlin", "cudarc?/nccl"]
metal = ["dep:metal"]  # Metal backend (macOS) — also gates the fused-transformer Metal pipelines
marlin = []  # Marlin INT4xFP16 kernel (auto-enabled by cuda)
vllm-marlin = ["cuda"]  # vLLM gptq_marlin port (Phase 12). NOT enabled by default
                        # — opt-in until correctness + perf validated. Adds
                        # ~30 min to first build (compiles 19 .cu instantiations).
vllm-moe-marlin = ["cuda", "vllm-marlin"]  # vLLM marlin_moe_wna16 port (Stage
                        # 14). NOT enabled by default — opt-in. Adds ~15 min to
                        # first build (single .cu with many template
                        # instantiations). Pulls in vllm-marlin because the
                        # MoE path needs the gptq_marlin_repack helper to
                        # convert GPTQ-on-disk → vLLM-Marlin tile layout.
tensor-parallel = ["cuda"]  # Kept as alias for backward compat; cuda already includes NCCL
# Use triton-rs-compiled PTX in place of hand-written .cu kernels.
# Requires `cuda` (we still launch via cudarc) and pre-generated PTX files
# under `triton_ptx/`. Regenerate with `tools/regen-triton-ptx.sh` on a
# Linux+CUDA box that has triton-rs checked out as a sibling repo.
triton-kernels = ["cuda"]
