[package]
name = "ferrum-kernels"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Unified compute kernels (CUDA/Metal/CPU) and model runner for Ferrum inference"
readme = "../../README.md"

[dependencies]
ferrum-types = { workspace = true }
ferrum-interfaces = { workspace = true }
# Trace writer for FERRUM_TRACE_OUT chrome-trace JSON (Phase 1.5).
ferrum-bench-core = { workspace = true }
candle-core = { workspace = true }
half = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
cudarc = { version = "0.19", default-features = false, features = ["driver", "cublas", "f16", "nvrtc", "cuda-version-from-build-system"], optional = true }
metal = { version = "0.31", optional = true }

[build-dependencies]
bindgen_cuda = "0.1.6"

[features]
default = []
cuda = ["candle-core/cuda", "dep:cudarc", "marlin", "cudarc?/nccl"]
metal = ["dep:metal"]  # Metal backend (macOS) — also gates the fused-transformer Metal pipelines
marlin = []  # Marlin INT4xFP16 kernel (auto-enabled by cuda)
vllm-marlin = ["cuda"]  # vLLM gptq_marlin port (Phase 12). NOT enabled by default
                        # — opt-in until correctness + perf validated. Adds
                        # ~30 min to first build (compiles 19 .cu instantiations).
vllm-moe-marlin = ["cuda", "vllm-marlin"]  # vLLM marlin_moe_wna16 port (Stage
                        # 14). NOT enabled by default — opt-in. Adds ~15 min to
                        # first build (single .cu with many template
                        # instantiations). Pulls in vllm-marlin because the
                        # MoE path needs the gptq_marlin_repack helper to
                        # convert GPTQ-on-disk → vLLM-Marlin tile layout.
vllm-paged-attn-v2 = ["cuda"]  # vLLM paged_attention_v2 port (2026-05-12).
                        # Vendored from vllm v0.20.2 csrc/attention/. Single
                        # template instantiation (HEAD=128, BLOCK=16, FP16) —
                        # ~1-2 min compile. Bench expected to switch c=32 attn
                        # from `paged_batched_flash_decode_attn_f16` to vLLM's
                        # v2 multi-partition kernel. Pairs with the
                        # `split_qkv_norm_rope_into_paged_cache_varlen_vllm_f16`
                        # PTX kernel which writes the vLLM K/V layout vLLM v2
                        # expects (`[blocks, heads, head/x, block, x]` K).
                        # Runtime selection via `FERRUM_USE_VLLM_PAGED_ATTN=1`.
fa2-source = ["cuda"]  # Source-built FlashAttention-2 paged-varlen bridge.
                        # Opt-in prototype for Qwen3 M3 shape (HEAD=128,
                        # BLOCK=16, FP16). Builds FA2 forward templates from a
                        # source checkout and links them into ferrum-kernels so
                        # runtime does not depend on vLLM/Torch/Python.
                        # Runtime selection via `FERRUM_FA2_SOURCE=1`.
tensor-parallel = ["cuda"]  # Kept as alias for backward compat; cuda already includes NCCL
# Use triton-rs-compiled PTX in place of hand-written .cu kernels.
# Requires `cuda` (we still launch via cudarc) and pre-generated PTX files
# under `triton_ptx/`. Regenerate with `tools/regen-triton-ptx.sh` on a
# Linux+CUDA box that has triton-rs checked out as a sibling repo.
triton-kernels = ["cuda"]
