[package]
name = "ferrum-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
ferrum-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tokenization (framework-agnostic)
tokenizers = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
rand = "0.8"
toml = { workspace = true }
once_cell = "1.19"
dirs = { workspace = true }
reqwest = { workspace = true }
hf-hub = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[features]
default = []
integration-tests = []
