[package]
name = "ferrum-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Model architectures (LLaMA, Qwen, BERT) for Ferrum inference"
readme = "../../README.md"

[dependencies]
# Core dependencies - New architecture
ferrum-types = { workspace = true }
ferrum-interfaces = { workspace = true }

# Optional runtime dependency for loading weights
ferrum-runtime = { workspace = true, optional = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tokenization (framework-agnostic)
tokenizers = { workspace = true }

# ML Framework - Candle
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
candle-flash-attn = { workspace = true, optional = true }
safetensors = { workspace = true }

# Fused attention
ferrum-attention = { path = "../ferrum-attention" }

# Custom CUDA kernels
ferrum-cuda-kernels = { workspace = true, optional = true }
half = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Quantization
bytemuck = { version = "1.23", features = ["derive"] }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
rand = "0.8"
toml = { workspace = true }
once_cell = "1.19"
dirs = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
hf-hub = { workspace = true }
indicatif = "0.17"
pathdiff = "0.2"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
base64 = "0.22"
hound = "3.5"
flate2 = "1"
rustfft = "6"
rubato = "2.0.0"
audioadapter-buffers = "3.0.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
ferrum-testkit = { workspace = true }

[features]
default = []
# Enable runtime integration for weight loading
runtime = ["dep:ferrum-runtime"]
# Enable CUDA FlashAttention-2 and fused custom kernels
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]
metal = ["ferrum-attention/metal"]
cuda = ["dep:candle-flash-attn", "candle-nn/cuda", "dep:ferrum-cuda-kernels", "ferrum-cuda-kernels?/cuda"]
marlin = ["cuda"]  # kept for backward compat, cuda already enables marlin
tensor-parallel = ["cuda"]  # backward compat alias
# Enable integration tests
integration-tests = []
# Enable built-in model registry
registry = []
