[package]
name = "ferrum-quantization"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Weight-format abstraction (Dense / GPTQ / AWQ / GGUF) for Ferrum models"
readme = "../../README.md"

[dependencies]
ferrum-types = { workspace = true }
ferrum-kernels = { path = "../ferrum-kernels" }
tracing = { workspace = true }
serde = { workspace = true }

[features]
default = []
metal = ["ferrum-kernels/metal"]
cuda = ["ferrum-kernels/cuda"]
